add value and operator

--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
 </head>
 <body>
    <script>
-      console.log("hello world!") 
+      
+      let firstValue = prompt("enter the 1st value");
+      let operator = prompt("enter the operator");
+      let secondValue = prompt("enter the second value");
+
+      console.log(firstValue);
+      console.log(secondValue);
+      console.log(operator);
+
    </script>
 </body>
 </html>
